completo en un 75%

--- a/index.html
+++ b/index.html
@@ -8,201 +8,204 @@
 </head>
 <body>
 	<header>
-    	<div class="container row">
-        	<div class="col-2">
-        		<img src="img/logo.png" alt="5by5 logo">
-        	</div>
-        <nav class="col-10">
-            <ul>
-                <li><a href="#">LIVE</a></li>
-                <li><a href="#">SHOWS</a></li>
-                <li><a href="#">SUSCRIBE</a></li>
-                <li><a href="#">SCHEDULE</a></li>
-                <li><a href="#">SUPPORT 5BY5</a></li>
-                <li><a href="#">ADVERTISE</a></li>
-                <li><a href="#">CONTACT</a></li>
-            </ul>
-        </nav>    
-        </div>
+    	<div class="container">
+    		<div class="row">
+	        	<div class="col-2">
+	        		<img src="img/logo.png" class="logo" alt="5by5 logo">
+	        	</div>
+	        <div class="col-1"></div>
+	        <nav class="col-9 text-right">
+	            <ul>
+	                <li><a href="#">LIVE</a></li>
+	                <li><a href="#">SHOWS</a></li>
+	                <li><a href="#">SUSCRIBE</a></li>
+	                <li><a href="#">SCHEDULE</a></li>
+	                <li><a href="#">SUPPORT 5BY5</a></li>
+	                <li><a href="#">ADVERTISE</a></li>
+	                <li><a href="#">CONTACT</a></li>
+	            </ul>
+	        </nav>    
+	        </div>
+	    </div>
     </header>
-    <section class="container">
-    	<div class="row">
-	        <div><strong>Lastest episodes</strong><a href="#">More episodes</a></div>
-		        <div class="banner">
-		            <div class="col-3 text-center">
-		                <img src="img/dlc.jpg" alt="mas vistos">
-		                <div>DLC83</div>
-		            </div>
-		            <div class="col-3 text-center">
-		                <img src="img/almanac.jpg" alt="mas vistos">
-		                <div>Ihnatko Almanac 149</div>
-		            </div>
-		            <div class="col-3 text-center">
-		                <img src="img/onthegrid.jpg" alt="mas vistos">
-		                <div>On the grid 124</div>
-		            </div>
-		            <div class="col-3 text-center">
-		                <img src="img/changelog.jpg" alt="mas vistos">
-		                <div>Change log 165</div>
-		            </div>
-				</div>
-        </div>
+    <section class="banner">
+    	<div class="container">
+	    	<div class="row">
+	    		<h3 class="promo">Latest episodes <span>More episodes</span></h3>
+	            <div class="col-3 text-center">
+	                <img src="img/dlc.jpg" alt="mas vistos">
+	                <div class="titulo"><b>DLC83</b></div>
+	            </div>
+	            <div class="col-3 text-center">
+	                <img src="img/almanac.jpg" alt="mas vistos">
+	                <div class="titulo"><b>Ihnatko Almanac 149</b></div>
+	            </div>
+	            <div class="col-3 text-center">
+	                <img src="img/onthegrid.jpg" alt="mas vistos">
+	                <div class="titulo"><b>On the grid 124</b></div>
+	            </div>
+	            <div class="col-3 text-center">
+	                <img src="img/changelog.jpg" alt="mas vistos">
+	                <div class="titulo"><b>Change log 165</b></div>
+	            </div>
+			</div>
+	    </div>
     </section>
-    <section class="container">
+    <section class="lista container">
     	<div class="row">
     		<div class="col-9">
 	    			<div class="row">
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/amplified.jpg" alt="">
-			    			<div>Amplified</div>
+			    			<div class="sub-title">Amplified</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/back-to-work.jpg" alt="">		    			
-			    			<div>Back to work</div>
+			    			<div class="sub-title">Back to work</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 		    				<img src="img/thumbs/the-big-show.jpg" alt="">		    			
-		    				<div>The Big Show</div>
+		    				<div class="sub-title">The Big Show</div>
 		    			</div>
 		    			<div class="col-2 text-center">
 		    				<img src="img/thumbs/better-know.jpg" alt="">		    			
-		    				<div>Better Know</div>
+		    				<div class="sub-title">Better Know</div>
 		    			</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/cash-corner.jpg" alt="">		    			
-			    			<div>Cash Corner</div>
+			    			<div class="sub-title">Cash Corner</div>
 			    		</div>
 		    		</div>
 		    		<div class="row">
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/changelog.jpg" alt="">
-			    			<div>Changelog</div>
+			    			<div class="sub-title">Changelog</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/critical-path.jpg" alt="">
-			    			<div>Critical Path</div>
+			    			<div class="sub-title">Critical Path</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/dan.jpg" alt="">
-			    			<div>Dan Benjamin Hour</div>
+			    			<div class="sub-title">Dan Benjamin Hour</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/dlc.jpg" alt="">
-			    			<div>DLC</div>
+			    			<div class="sub-title">DLC</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/frequency.jpg" alt="">
-			    			<div>Frequency</div>
+			    			<div class="sub-title">Frequency</div>
 			    		</div>
 		    		</div>
 		    		<div class="row">
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/home-work.jpg" alt="">
-			    			<div>Home Work</div>
+			    			<div class="sub-title">Home Work</div>
 		    			</div>
 			    		<div class="col-2 text-center">
 			    			<img src="img/thumbs/ihnatko.jpg" alt="">
-		    				<div>Inhatko</div>
+		    				<div class="sub-title">Inhatko</div>
 		    			</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/ohyes.jpg" alt="">
-			    			<div>Oh yes</div>
+			    			<div class="sub-title">Oh yes</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/getting-there.jpg" alt="">
-			    			<div>Getting There</div>
+			    			<div class="sub-title">Getting There</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/movies.jpg" alt="">
-			     			<div>Movies</div>
+			     			<div class="sub-title">Movies</div>
 			     		</div>
 		    		</div>
 		    		<div class="row">
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/mac-power.jpg" alt="">
-			    			<div>Mac Power</div>
+			    			<div class="sub-title">Mac Power</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/on-the-grid.jpg" alt="">
-			    			<div>On the Grid</div>
+			    			<div class="sub-title">On the Grid</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/on-taking-pictures.jpg" alt="">
-			    			<div>On Taking Pictures</div>
+			    			<div class="sub-title">On Taking Pictures</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/latest-paleo.jpg" alt="">
-			    			<div>Latest in Paleo</div>
+			    			<div class="sub-title">Latest in Paleo</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/pipeline.jpg" alt="">
-			    			<div>Pipeline</div>
+			    			<div class="sub-title">Pipeline</div>
 			    		</div>
 		    		</div>
 		    		<div class="row">
 		    			<div class="col-2 text-center">
 		    				<img class="tamaño" src="img/thumbs/pipeline-classic.jpg">
-		    				<div>Pipeline Classic</div>
+		    				<div class="sub-title">Pipeline Classic</div>
 		    			</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/podcast-method.jpg" alt="">
-			    			<div>Podcast Method</div>
+			    			<div class="sub-title">Podcast Method</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/quit.jpg" alt="">
-			    			<div>Quit</div>
+			    			<div class="sub-title">Quit</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/ruby-on-rails-podcast.jpg" alt="">
-			    			<div>Ruby on Rails Podcast</div>
+			    			<div class="sub-title">Ruby on Rails Podcast</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/specials.jpg" alt="">
-			    			<div>5by5 Specials</div>
+			    			<div class="sub-title">5by5 Specials</div>
 			    		</div>
 		    		</div>
 		    		<div class="row">
 		    			<div class="col-2 text-center">
 		    				<img class="tamaño" src="img/thumbs/steady.jpg">
-		    				<div>Steady</div>
+		    				<div class="sub-title">Steady</div>
 		    			</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/supercharged.jpg" alt="">
-			    			<div>Supercharged</div>
+			    			<div class="sub-title">Supercharged</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/web-ahead.jpg" alt="">
-			    			<div>Web Ahead</div>
+			    			<div class="sub-title">Web Ahead</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/write-for-life.jpg" alt="">
-			    			<div>Write For Your Life</div>
+			    			<div class="sub-title">Write For Your Life</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/after-dark.jpg" alt="">
-			    			<div>After Dark</div>
+			    			<div class="sub-title">After Dark</div>
 			    		</div>
 		    		</div>
 		    		<div class="row">
 		    			<div class="col-2 text-center">
 		    				<img class="tamaño" src="img/thumbs/human-survival.jpg">
-		    				<div>Ankward Human Survival Guide</div>
+		    				<div class="sub-title">Ankward Human Survival Guide</div>
 		    			</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/morning-dump.jpg" alt="">
-			    			<div>Morning Dump</div>
+			    			<div class="sub-title">Morning Dump</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/hablo-geek.jpg" alt="">
-			    			<div>HabloGeek</div>
+			    			<div class="sub-title">HabloGeek</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/puromac.jpg" alt="">
-			    			<div>Puromac</div>
+			    			<div class="sub-title">Puromac</div>
 			    		</div>
 		    			<div class="col-2 text-center">
 			    			<img src="img/thumbs/tech-douchebags.jpg" alt="">
-			    			<div>Tech Douchebags</div>
+			    			<div class="sub-title">Tech Douchebags</div>
 			    		</div>
 		    		</div>
     		</div>
