trabajo cas listo, solo falta el hover

--- a/index.html
+++ b/index.html
@@ -210,20 +210,25 @@
 		    		</div>
     		</div>
     		<div class="col-3">
-	            <h3>Suscribe to 5by5</h3>
-	            <a href="">5by5 on iTunes</a>
-	            <a href="">Master RSS Feed</a>
-	            <a href="">Pocket Casts</a>
-	            <h3>5by5 Apps</h3>
-	            <a href="">5by5 Radio for iOS</a>
-	            <a href="">5by5 for Mac OS X</a>
-	        <span>Bandwith for July 2015 is soponsored by <a href="">CacheFly: The fastest, most reliable CDN in the busniness</a></span>
+    			<ul> <b>Suscribe to 5by5</b>
+    				<hr>
+    				<li><img src="img/icons/itunes.png"> 5by5 on iTunes</li>
+    				<li><img src="img/icons/rss.png"> Master RSS Feed</li>
+    				<li><img src="img/icons/podcast.png" class="small"> Pocket Casts</li>
+    			</ul>
+    			<ul> <b>5by5 Apps</b>
+    			<hr>
+    				<li><img src="img/icons/radio.png" class="small">5by5 Radio for iOS</li>
+    				<li><img src="img/icons/pencil.png" class="small">5by5 for Mac OS X</li>
+    			</ul>
+    			<hr>
+	        <span>Bandwith for July 2015 is soponsored by <a href="#" class="link-medio">CacheFly: The fastest, most reliable CDN in the busniness</a></span>
 	   	</div>
     </section>
     <footer>
     	<div class="footercontainer">
-	        <div>5by5 is a podcast network for geeks, designers, developers, gamers, entrepeneurs, and people like you, with shows hosted by people including Dan Benjamin, Merlin Mann, Horace Dediu, and Jeffrey Zeldman. <a href="">Read more...</a></div>
-	        <div class="footerlinks">
+	        <p>5by5 is a podcast network for geeks, designers, developers, gamers, entrepeneurs, and people like you, with shows hosted by people including Dan Benjamin, Merlin Mann, Horace Dediu, and Jeffrey Zeldman. <a href="#" class="link-final">Read more...</a></p>
+	        <div class=" footerlinks text-center">
 	            <ul>
 	                <li><a href="">About</a></li>
 	                <li><a href="">Shows</a></li>
@@ -235,8 +240,8 @@
 	                <li><a href="">Advertise</a></li>
 	                <li><a href="">Newslestter</a></li>
 	            </ul>
+	        <div class="text-center">Copyright 2009-2015 by Dan Benjamin and 5by5 Productions LLC in Austin, Texas</div>
 	        </div>
-	        <div>Copyright 2009-2015 by Dan Benjamin and 5by5 Productions LLC in Austin, Texas</div>
         </div>
     </footer>
 </body>
